--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <button class="install-btn" id="eyelidsBtn" onclick="runProcess('eyelids')">✨ התחילי הרמה</button>
             <div class="completion-message" id="eyelidsComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ העפעפיים הורמו!</p>
-                <p style="color: #666;">מבט פתוח וצעיר.</p>
+                <p style="color: #666;">והוחלף באור אלוקי ומבט פתוח וצעיר.</p>
             </div>
         </div>
     </div>
@@ -351,7 +351,7 @@
             <button class="install-btn" id="underEyesBtn" onclick="runProcess('underEyes')">✨ התחילי הסרה</button>
             <div class="completion-message" id="underEyesComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הקמטים הוסרו!</p>
-                <p style="color: #666;">עור חלק מתחת לעיניים.</p>
+                <p style="color: #666;">והוחלף באור אלוקי ועור חלק מתחת לעיניים.</p>
             </div>
         </div>
     </div>
@@ -368,7 +368,7 @@
             <button class="install-btn" id="crowsFeetBtn" onclick="runProcess('crowsFeet')">✨ התחילי הסרה</button>
             <div class="completion-message" id="crowsFeetComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ רגלי העורב הוסרו!</p>
-                <p style="color: #666;">עור חלק בצידי העיניים.</p>
+                <p style="color: #666;">והוחלף באור אלוקי ועור חלק בצידי העיניים.</p>
             </div>
         </div>
     </div>
@@ -385,7 +385,7 @@
             <button class="install-btn" id="betweenBrowsBtn" onclick="runProcess('betweenBrows')">✨ התחילי הסרה</button>
             <div class="completion-message" id="betweenBrowsComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ קמט הכעס הוסר!</p>
-                <p style="color: #666;">מצח חלק ורגוע.</p>
+                <p style="color: #666;">והוחלף באור אלוקי ומצח חלק ורגוע.</p>
             </div>
         </div>
     </div>
@@ -402,7 +402,7 @@
             <button class="install-btn" id="foreheadBtn" onclick="runProcess('forehead')">✨ התחילי הסרה</button>
             <div class="completion-message" id="foreheadComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ קמטי המצח הוסרו!</p>
-                <p style="color: #666;">מצח חלק וצעיר.</p>
+                <p style="color: #666;">והוחלף באור אלוקי ומצח חלק וצעיר.</p>
             </div>
         </div>
     </div>
@@ -419,7 +419,7 @@
             <button class="install-btn" id="mouthSidesBtn" onclick="runProcess('mouthSides')">✨ התחילי הסרה</button>
             <div class="completion-message" id="mouthSidesComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ קמטי החיוך הוסרו!</p>
-                <p style="color: #666;">עור חלק סביב הפה.</p>
+                <p style="color: #666;">והוחלף באור אלוקי ועור חלק סביב הפה.</p>
             </div>
         </div>
     </div>
@@ -436,7 +436,7 @@
             <button class="install-btn" id="faceRightBtn" onclick="runProcess('faceRight')">✨ התחילי מתיחה</button>
             <div class="completion-message" id="faceRightComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ צד ימין הורם!</p>
-                <p style="color: #666;">פנים מורמות ומתוחות.</p>
+                <p style="color: #666;">והוחלף באור אלוקי ופנים מורמות ומתוחות.</p>
             </div>
         </div>
     </div>
@@ -453,7 +453,7 @@
             <button class="install-btn" id="faceLeftBtn" onclick="runProcess('faceLeft')">✨ התחילי מתיחה</button>
             <div class="completion-message" id="faceLeftComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ צד שמאל הורם!</p>
-                <p style="color: #666;">פנים מורמות ומתוחות.</p>
+                <p style="color: #666;">והוחלף באור אלוקי ופנים מורמות ומתוחות.</p>
             </div>
         </div>
     </div>
@@ -470,7 +470,7 @@
             <button class="install-btn" id="neckWrinklesBtn" onclick="runProcess('neckWrinkles')">✨ התחילי הסרה</button>
             <div class="completion-message" id="neckWrinklesComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ קמטי הצוואר הוסרו!</p>
-                <p style="color: #666;">צוואר חלק וצעיר.</p>
+                <p style="color: #666;">והוחלף באור אלוקי וצוואר חלק וצעיר.</p>
             </div>
         </div>
     </div>
@@ -487,7 +487,7 @@
             <button class="install-btn" id="neckLiftBtn" onclick="runProcess('neckLift')">✨ התחילי מתיחה</button>
             <div class="completion-message" id="neckLiftComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הצוואר הורם!</p>
-                <p style="color: #666;">צוואר מתוח ואלגנטי.</p>
+                <p style="color: #666;">והוחלף באור אלוקי וצוואר מתוח ואלגנטי.</p>
             </div>
         </div>
     </div>
@@ -504,7 +504,7 @@
             <button class="install-btn" id="eyebrowsBtn" onclick="runProcess('eyebrows')">✨ התחילי מילוי</button>
             <div class="completion-message" id="eyebrowsComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הגבות התמלאו!</p>
-                <p style="color: #666;">גבות מלאות ויפות.</p>
+                <p style="color: #666;">והוחלפו באור אלוקי וגבות מלאות ויפות.</p>
             </div>
         </div>
     </div>
@@ -521,7 +521,7 @@
             <button class="install-btn" id="hairBtn" onclick="runProcess('hair')">✨ התחילי הוספה</button>
             <div class="completion-message" id="hairComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ זקיקי השיער נוספו!</p>
-                <p style="color: #666;">שיער מלא ובריא.</p>
+                <p style="color: #666;">והוחלף באור אלוקי ושיער מלא ובריא.</p>
             </div>
         </div>
     </div>
